force-app/main/default/objects/PartnerSync_Config__mdt/PartnerSync_Config__mdt.object-meta.xml
<CustomObject>
    <label>PartnerSync Config</label>
    <pluralLabel>PartnerSync Configs</pluralLabel>
</CustomObject>