force-app/main/default/objects/PartnerSync_Config__mdt/fields/Default_Deal_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Deal_Expiry_Days__c</fullName>
    <description
  >Default number of days before deal protection expires.</description>
    <label>Default Deal Expiry Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>