force-app/main/default/objects/PartnerSync_Config__mdt/fields/Default_Lead_Response_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Lead_Response_Days__c</fullName>
    <label>Default Lead Response Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>