force-app/main/default/objects/PartnerSync_Config__mdt/fields/Enable_Content_Hub__c.field-meta.xml
<CustomField>
    <fullName>Enable_Content_Hub__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether content hub functionality is enabled.</description>
    <label>Enable Content Hub</label>
    <type>Checkbox</type>
</CustomField>