force-app/main/default/objects/PartnerSync_Config__mdt/fields/Enable_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Enable_Deal_Registration__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether deal registration functionality is enabled.</description>
    <label>Enable Deal Registration</label>
    <type>Checkbox</type>
</CustomField>