force-app/main/default/objects/PartnerSync_Config__mdt/fields/Enable_Gamification__c.field-meta.xml
<CustomField>
    <fullName>Enable_Gamification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Gamification</label>
    <type>Checkbox</type>
</CustomField>