force-app/main/default/objects/PartnerSync_Config__mdt/fields/Enable_Partner_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Enable_Partner_Analytics__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether partner analytics functionality is enabled.</description>
    <label>Enable Partner Analytics</label>
    <type>Checkbox</type>
</CustomField>