force-app/main/default/objects/PartnerSync_Config__mdt/fields/Enable_Partner_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Enable_Partner_Onboarding__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether partner onboarding functionality is enabled.</description>
    <label>Enable Partner Onboarding</label>
    <type>Checkbox</type>
</CustomField>