force-app/main/default/objects/PartnerSync_Config__mdt/fields/Max_Open_Deals_Per_Partner__c.field-meta.xml
<CustomField>
    <fullName>Max_Open_Deals_Per_Partner__c</fullName>
    <description
  >Maximum number of open deal registrations allowed per partner.</description>
    <label>Max Open Deals Per Partner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>